# Homework_web_14

./: .coverage  .gitignore  docker-compose.yml  example.env  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 55eeb2596deb_change_contact.py  5a23509c0277_del_unique_email_contact.py  8c010e4876e0_init.py  93f4c7640eaf_add_confirmed.py  cf4a7d426069_add_user.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: schemas.py
src/conf/: config.py
src/database/: db.py  model.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py
tests/: conftest.py  test_main.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_user.py
